# MyTower

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_REVIEW.md  COMMAND_QUEUE_FIX.md  DEPLOY_SCRIPT_EDGE_CASES.md  DOCKER_README.md  Dockerfile  FORMATTING_NOTES.md  Hi, let's continue my project from.txt  LICENSE  Makefile  README.md  REQUIREMENTS_MIGRATION.md  TODO.md  UPDATE_CORS.md  WEBSOCKET_DEBUGGING.md  WEB_DEPLOYMENT.md  agents.md  aws-restart.sh  aws-run.sh  aws-status.sh  aws-stop.sh  build-web.sh  create  deploy-to-aws.sh  deploy-web-to-aws.sh  docker-compose.yml  local-docker-logs.sh  local-docker-start.sh  local-docker-stop.sh  logs-docker-local.sh  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-base.txt  (+8 more)
.claude/: settings.local.json
Interviewstuff/: cycles.py
docs/: DEPENDENCY_INJECTION_REFACTORING.md  DI_REFACTORING_REMAINING_WORK.md  GRACEFUL_SHUTDOWN.md  MOCK_TYPE_SAFETY_AUDIT.md  SUBSCRIPTIONS.md  UI_IMPLEMENTATION_GUIDE.md  WEBSOCKET_LOG_EXAMPLES.md  WEBSOCKET_TEST_PLAN.md  protocol_architecture.md  rate-limiting-implementation-notes.md  rate-limiting.md  subscription_example.js  subscription_example.py
flake8_max_blank_lines/: pyproject.toml
flake8_max_blank_lines/flake8_max_blank_lines/: __init__.py  checker.py
mytower/: __init__.py  main.py  old_main.py  rename instr.txt  scratch.sh  setup-aws.md
mytower/api/: __init__.py  dev_server.py  game_bridge.py  game_bridge_protocol.py  graphql_types.py  input_types.py  sample_game_factory.md  schema.py  server.py  type_conversions.py  unit_scalars.py  validation_constants.py
mytower/game/: __init__.py  building.py  config.py  constants.py  demo_builder.py  desktop_view.py  elevator.py  elevator.py.bak  elevator_bank.py  floor.py  floor.py.bak  game_state.py  game_state.py.bak  id_generator.py  input.py  logger.py  logger.py.bak  person.py  types.py  types.py.bak  ui.py  ui.py.bak
mytower/game/controllers/: __init__.py  controller_commands.py  game_controller.py
mytower/game/core/: config.py  constants.py  entity_protocols.py  id_generator.py  primitive_constants.py  types.py  units.py  units_fast.pyx
mytower/game/debug/: gc_profiler.py
mytower/game/entities/: building.py  elevator.py  elevator_bank.py  entities_protocol.py  floor.py  person.py  person_agent.py
mytower/game/models/: game_model.py  model_snapshots.py  snapshot_builders.py
mytower/game/systems/: person_batch_updater.py  spatial_index.py
mytower/game/utilities/: cli_args.py  demo_builder.py  input.py  logger.py  simulation_loop.py
mytower/game/views/: desktop_ui.py  desktop_view.py  input_handler.py
mytower/tests/: TEST_UTILITIES_README.md  conftest.py  test_elevator.py  test_protocols.py  test_utilities.py  test_utilities_demo.py
mytower/tests/api/: __init__.py  conftest.py  test_cors.py  test_game_bridge_queue.py  test_game_bridge_threading.py  test_input_validation.py  test_rate_limiting.py  test_subscription_error_handling.py  test_subscription_integration.py  test_subscription_timing.py  test_subscriptions.py
mytower/tests/building/: test_building_basic.py
mytower/tests/controllers/: test_controller_commands.py  test_game_controller.py
mytower/tests/core/: test_config.py  test_constants.py  test_id_generator.py  test_units.py
mytower/tests/elevator/: __init__.py  conftest.py  test__elevator_movement.py  test_basic.py  test_elevator.py  test_elevator_basic.py  test_elevator_passengers.py  test_elevator_state_machine.py  test_movement.py  test_passengers.py  test_state_machine.py
mytower/tests/elevator_bank/: conftest.py  test_el_bank_basic.py  test_el_bank_idle_elevator.py  test_el_bank_idle_fallback.py  test_el_bank_ready_elevator.py  test_el_bank_requests.py
mytower/tests/floor/: test_floor_people.py
mytower/tests/models/: test_model_snapshots.py  (+1 more)
notes/: INPUT_ARCHITECTURE.md  INPUT_SYSTEM_SUMMARY.md  control_loop.md
web/: .env.example  codegen.yml  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.node.json  vite.config.ts
web/src/: App.svelte  WebGameView.ts  app.css  main.ts  vite-env.d.ts
(+29 files in other folders)
