[project]
name = "mytower"
version = "0.1.0"
description = "SimTower-inspired elevator simulation game"
readme = "README.md"
requires-python = ">=3.12"  # ✅ Minimum 3.12, but Docker uses 3.13
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Ryan" }
]

dependencies = [
    "pygame>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # strawberry-graphql pinned <1.0.0 - see requirements-base.txt for rationale
    "strawberry-graphql[fastapi]>=0.245.0,<1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "flake8>=7.0.0",
]

[project.scripts]
mytower = "mytower.main:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# spell-checker: ignore-file
# NOTE: We use Ruff Format instead of Black (faster, identical output)
# Ruff Format is configured to ignore blank line checks (E301-E306)
# because we use custom 2-blank-line spacing rules via Flake8 X303 plugin.

[tool.coverage.run]
# Enable branch measurement to match `--cov-branch`
branch = true
# Measure only the project package
source = ["mytower"]
# Allow parallel-mode (useful when tests run in parallel)
parallel = true

[tool.coverage.report]
# Show missing lines in the terminal (matches --cov-report=term-missing)
show_missing = true
# Don't fail the build by default (adjust as needed)
fail_under = 0

[tool.coverage.html]
# Match pytest-cov's html output target
directory = "htmlcov"

[tool.coverage.xml]
# Match pytest-cov's xml output
output = "coverage.xml"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E203",  # whitespace before ':'
    # Custom blank line rules - we use our own 2-blank-line system via Flake8 X303
    "E301",  # expected 1 blank line, found 0
    "E302",  # expected 2 blank lines, found N
    "E303",  # too many blank lines (using custom X303)
    "E304",  # blank lines found after function decorator
    "E305",  # expected 2 blank lines after class or function definition
    "E306",  # expected 1 blank line before a nested definition
    # Code style preferences
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E712",  # comparison to True/False (explicitly testing bool values in tests)
    "B007",  # unused loop variable (sometimes needed for count)
    "UP040", # TypeAlias annotation (prefer explicit for clarity in protocols)
    "UP046", # Generic class uses Generic subclass (style preference for clarity)
    "I001",  # Import block is un-sorted (imports organized manually for readability)
]

[tool.ruff.lint.per-file-ignores]
# Protocol files use one-line property definitions by convention
"mytower/game/entities/entities_protocol.py" = ["E701", "E702"]
"mytower/game/core/units.py" = ["E701", "E702"]
"mytower/tests/conftest.py" = ["E701", "E702"]
"mytower/tests/test_utilities.py" = ["E701", "E702"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
